--- a/campus_v0.0.6.css
+++ b/campus_v0.0.6.css
@@ -93,7 +93,8 @@
     color: #1E1E1E;
 }
 .campus .wsb-content .wsb-tiles {
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 31% 31% 31%;
 }
 .campus .wsb-content .campus-wsb-tile {
     box-shadow: 5px 5px 5px #c3c3c3 !important;
@@ -152,16 +153,14 @@
     color: #696969;
 }
 @media screen and (max-width: 1024px) {
-    .campus .wsb-content a {
-        flex-basis: 49%;
-        flex-grow: 0;
+    .campus .wsb-content .wsb-tiles {
+        display: grid;
+        grid-template-columns: 49% 49%;
    }
 }
 @media screen and (max-width: 760px) {
-    .campus .wsb-content a {
-        flex-basis: 100%;
-        flex-grow: 0;
-        margin-left: 1rem;
-        margin-right: 1rem;
+    .campus .wsb-content .wsb-tiles {
+        display: grid;
+        grid-template-columns: 1fr;
    }
 }
